--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+ <!--  <div id="time">
+    <p>tiempo agotado!</p>
+    <button id="reset">ok</button>
+  </div> -->
   <canvas id="canvas" width="800" height="400"></canvas>
   
   
